[gd_scene load_steps=13 format=3 uid="uid://ckwgnwm6j4enf"]

[ext_resource type="Script" path="res://test_scenes/Target_Practice/target.gd" id="1_c4vmu"]
[ext_resource type="Texture2D" uid="uid://di4ivc8myym02" path="res://dialogic_example/level_example_textures/Sign post.png" id="2_i4byt"]
[ext_resource type="Texture2D" uid="uid://ov5eks1qos82" path="res://test_scenes/Target_Practice/Hit.png" id="3_g2yco"]

[sub_resource type="Curve2D" id="Curve2D_x60n2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 400, 74, 0, 0, 0, 0, 625, 71, 0, 0, 0, 0, 851, 69)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfnl4"]
size = Vector2(41, 72)

[sub_resource type="Animation" id="Animation_wcps4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wjwmd"]
resource_name = "TargetFlash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.47, 0.47, 0.47, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_timescale"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dc4in"]
_data = {
"RESET": SubResource("Animation_wcps4"),
"TargetFlash": SubResource("Animation_wjwmd")
}

[sub_resource type="Animation" id="Animation_h1l0r"]
resource_name = "HitFlash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 100, 100, 1)]
}

[sub_resource type="Animation" id="Animation_mauto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0ehl"]
_data = {
"HitFlash": SubResource("Animation_h1l0r"),
"RESET": SubResource("Animation_mauto")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2270v"]
size = Vector2(33, 64)

[node name="Target" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
light_mask = 3
visibility_layer = 3
position = Vector2(265, 136)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_c4vmu")
speed = 500
timeStart = 10
flashStart = 5
timeScale = 0.67
sprite = NodePath("Path2D/PathFollow2D/Sprite2D")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-394, -16)
curve = SubResource("Curve2D_x60n2")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(400, 74)
rotation = -0.0133325

[node name="Entered" type="Area2D" parent="Path2D/PathFollow2D"]
position = Vector2(-5.22623, -58.0748)
rotation = 0.0133325
collision_layer = 0
collision_mask = 2

[node name="HitArea" type="CollisionShape2D" parent="Path2D/PathFollow2D/Entered"]
position = Vector2(-3.5, -2)
shape = SubResource("RectangleShape2D_mfnl4")

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(-8.25262, -56.115)
rotation = 0.0133325
scale = Vector2(1.09375, 3.90625)
texture = ExtResource("2_i4byt")

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D/Sprite2D"]
visible = false
position = Vector2(-0.228653, -19.648)
scale = Vector2(0.188674, 0.0368264)
texture = ExtResource("3_g2yco")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_dc4in")
}

[node name="HitFlash" type="AnimationPlayer" parent="Path2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_s0ehl")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3.5, -2)
shape = SubResource("RectangleShape2D_2270v")

[connection signal="body_entered" from="Path2D/PathFollow2D/Entered" to="." method="_on_area_2d_body_entered"]
